--- a/milestone1/css/style.css
+++ b/milestone1/css/style.css
@@ -10,9 +10,73 @@ RESET
     box-sizing: border-box;
 }
 
+/* 
+**********************************************************************************
+MAIN
+**********************************************************************************
+*/
 
 
-h1 {
+.container {
+    width: 925px;
+    height: 560px;
     background-color: pink;
-    color: blue;
+    margin: 20px auto;
+    display: flex;
+}
+
+.minicontainer-sx {
+    width: 320px;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+}
+
+
+.header-sx {
+    height: 42px;
+    background-color: #eaeaea;
+}
+
+.main-sx {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+
+.campanella-notifiche {
+    height: 50px;
+    background-color: #91dafa;
+}
+
+.cerca-chat {
+    height: 30px;
+    background-color: #eaeaea;
+}
+
+.utenti {
+    flex: 1;
+    background-color: yellow;
+}
+
+.minicontainer-dx {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.header-dx {
+    border-left: 2px solid black;
+    height: 42px;
+    background-color: #eaeaea;
+}
+
+.main-dx {
+    flex-grow: 1;
+    background-color: aquamarine;
+}
+
+.footer-dx {
+    height: 45px;
+    background-color: #f3eeea;
 }
