v-for per generare lista dinamica sx

--- a/milestone1/css/style.css
+++ b/milestone1/css/style.css
@@ -68,6 +68,14 @@ MINICONTAINER-SX
     overflow: auto;
 }
 
+.main-sx ul li {
+    height: 50px;
+    width: 50px;
+    display: flex;
+    margin: 10px;
+
+}
+
 /* 
 *************
 MINICONTAINER-DX
