--- a/milestone1/css/style.css
+++ b/milestone1/css/style.css
@@ -17,14 +17,26 @@ RESET
 MAIN
 *************
 */
+body {
+    background: linear-gradient(#429488 0%, #429488 130px, #dbdbd3 130px, #dbdbd3 100%);
+    background-repeat: no-repeat;
+    height: 100vh;
+  }
+  
+
+/* background: linear-gradient(#429488 0%,
+            #429488 130px,
+            #dbdbd3 130px,
+            #dbdbd3 100%); */
 
 
 .container {
     width: 925px;
     height: 560px;
-    background-color: pink;
-    margin: 20px auto;
+    background-color: white;
+    margin: 20px auto 0;
     display: flex;
+    /* border: 1px solid #b1b1b1; */
 }
 
 /* 
@@ -47,6 +59,7 @@ MINICONTAINER-SX
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 10px;
 }
 
 .img-nome {
@@ -58,7 +71,7 @@ MINICONTAINER-SX
     height: 40px;
     width: 40px;
     border-radius: 50px;
-    background-color: red;
+    /* background-color: red; */
 }
 
 .sofia {
@@ -82,6 +95,7 @@ MINICONTAINER-SX
 
 .sezione-campanella-notifiche {
     height: 50px;
+    padding: 10px;
     background-color: #91dafa;
     display: flex;
     align-items: center;
@@ -110,13 +124,16 @@ MINICONTAINER-SX
 
 input {
     height: 100%;
+    width: 100%;
+    border-radius: 5px;
+    border: none;
 }
 
 .main-sx ul {
     flex: 1;
-    background-color: yellow;
+    /* background-color: yellow; */
     list-style-type: none;
-    overflow: auto;
+    overflow-y: scroll;
 }
 
 .main-sx ul li {
@@ -124,7 +141,6 @@ input {
     width: 50px;
     display: flex;
     margin: 10px;
-
 }
 
 /* 
@@ -142,47 +158,106 @@ MINICONTAINER-DX
 .header-dx {
     display: flex;
     align-items: center;
-
-    border-left: 2px solid black;
+    justify-content: space-between;
+    border-left: 1px solid #b1b1b1;
     height: 42px;
     background-color: #eaeaea;
+    padding: 20px;
+}
+
+.foto-e-nomi-selezionati {
+    display: flex;
+    align-items: center;
+    gap: 10px;
 }
 
 .foto-selezionata {
     height: 40px;
     width: 40px;
     border-radius: 50px;
-    background-color: red;
+    /* background-color: red; */
+    overflow: hidden;
 }
 
 .foto-selezionata img {
     height: 100%;
+
+}
+
+.container-di-3icone {
+    display: flex;
+    justify-self: right;
+    gap: 10px;
+    color: #b1b1b1;
 }
 
 .main-dx {
     flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    padding: 40px;
+    align-items: center;
     background-image: url('../img/mine.jpg');
     background-size: contain;
     background-position: center center;
+    overflow-y: scroll;
 }
 
 .messaggio-mio {
-    height: 35px;
-    width: 180px;
+    height: auto;
+    max-width: 70%; 
+    padding: 10px;
+    margin-bottom: 10px;
     background-color: #d6f8bc;
     border-radius: 5px;
+    text-align: right;
+    align-self: flex-end;
 }
 
 .messaggio-suo {
-    height: 35px;
-    width: 190px;
+    height: auto;
+    max-width: 70%;
+    padding: 10px;
+    margin-bottom: 10px;
     background-color: white;
     border-radius: 5px;
-    
+    text-align: left;
+    align-self: flex-start;
 }
 
 
 .footer-dx {
     height: 45px;
     background-color: #f3eeea;
+    display: flex;
+    align-items: center;
+}
+
+.smile-container {
+    width: 10%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.input-container {
+    width: 80%;
+    height: 70%;
+    display: flex;
+    align-items: center;
+}
+
+.input-container input {
+    width: 100%;
+    border-radius: 5px;
+    border: none;
+}
+
+
+
+.invio-container {
+    width: 10%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
