--- a/milestone3/css/style.css
+++ b/milestone3/css/style.css
@@ -217,7 +217,7 @@ MINICONTAINER-DX
     align-self: flex-start;
 }
 
-.main-dx p {
+.messaggio-invio {
     height: auto;
     max-width: 70%; 
     padding: 10px;
@@ -226,6 +226,18 @@ MINICONTAINER-DX
     border-radius: 5px;
     text-align: right;
     align-self: flex-end;
+}
+
+.messaggio-1sec {
+    height: auto;
+    max-width: 70%;
+    padding: 10px;
+    margin-bottom: 10px;
+    background-color: white;
+    border-radius: 5px;
+    text-align: left;
+    align-self: flex-start;
+
 }
 
 
